--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 streamlit==1.3.0
 openai==0.27.0
 google-cloud-documentai==1.4.0
-google-api-core==2.3.1
+google-api-core
 google-cloud-storage==1.43.0
 pandas==1.3.5
 Pillow==9.0.0
